--- a/app/metrics-app/src/assets/css/App.css
+++ b/app/metrics-app/src/assets/css/App.css
@@ -4,7 +4,6 @@
   justify-content: space-between;
   margin: 0 10px;
   padding: 20px 0px;
-  border-bottom: 1px solid #eee;
 }
 
 .section-buttons button {
@@ -35,10 +34,47 @@
   border-radius: 10px;
 }
 
-.section-form{
+.section-form, .section-reports{
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 100%;
+  padding: 20px 0px;
+}
+
+form label {
+  width: 100%;
+  text-align: left;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+form input {
+  width: 97%;
+}
+form select {
+  width: 100%;
+}
+
+form button {
+  width: 100%;
+  height: 100%;
+  border: 1px solid rgba(229, 25, 67);
+  background-color: rgba(229, 25, 67);
+  color: white;
+  font-size: 1.2rem;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 20px;
 }
